--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draqonify | Master Concepts</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
 
 <nav class="navbar">
     <a href="/" class="brand">DRAQONIFY</a>
-    <button id="theme-toggle" class="theme-toggle">🌙 Dark</button>
+    <button id="theme-toggle" class="theme-toggle">
+        <i class="ri-moon-line"></i>
+    </button>
 </nav>
 
 <main class="container hero">
@@ -18,8 +21,12 @@
     <p>Clear Notes for JEE & NEET. Zero Distractions.</p>
 
     <div class="btn-grid">
-        <a href="class-11.html" class="btn-big">Class 11</a>
-        <a href="#" class="btn-big" style="opacity: 0.5;">Class 12</a>
+        <a href="class-11.html" class="btn-big">
+            <i class="ri-book-open-line"></i> Class 11
+        </a>
+        <a href="#" class="btn-big" style="opacity: 0.5;">
+            <i class="ri-lock-line"></i> Class 12
+        </a>
     </div>
 </main>
 
