Update kinematics.html with icon and styling changes

--- a/public/class-11/physics/kinematics.html
+++ b/public/class-11/physics/kinematics.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kinematics | Draqonify</title>
     <link rel="stylesheet" href="../../../assets/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar">
     <a href="/" class="brand">DRAQONIFY</a>
-    <button id="theme-toggle" class="theme-toggle">🌙 Dark</button>
+    <button id="theme-toggle" class="theme-toggle"><i class="ri-moon-line"></i></button>
 </nav>
 <main class="container">
-    <p><a href="../../physics.html">Physics</a> > Kinematics</p>
+    <p style="color:var(--text-muted)">
+        <a href="../../physics.html">Physics</a> > Kinematics
+    </p>
     <h1>Kinematics</h1>
 
     <label class="topic-check">
@@ -21,13 +24,15 @@
     <p>Displacement is a vector quantity (shortest path).</p>
 
     <section class="exam-box">
-        <h3>🔥 JEE/NEET Focus</h3>
+        <h3><i class="ri-fire-line"></i> JEE/NEET Focus</h3>
         <ul>
             <li>Projectile Motion: Vertical velocity at max height is 0.</li>
         </ul>
     </section>
 
-    <button id="mark-complete" class="btn-big">Mark Complete</button>
+    <button id="mark-complete" class="btn-big">
+        <i class="ri-check-double-line"></i> Mark Complete
+    </button>
 </main>
 <script src="../../../assets/js/script.js"></script>
 </body>
