--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
     <h1>Master Your <span style="color:var(--primary)">Concepts.</span></h1>
     <p>Clear Notes for JEE & NEET. Zero Distractions.</p>
 
+    <div id="continue-container" style="display:none; margin-bottom: 20px; max-width: 500px; margin-left: auto; margin-right: auto;">
+        </div>
+
     <div class="btn-grid">
         <a href="class-11.html" class="btn-big">
             <i class="ri-book-open-line"></i> Class 11
