--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Draqonify | Master Concepts</title>
+    <title>Draqonify | Last Minute Prep</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -17,8 +17,8 @@
 </nav>
 
 <main class="container hero">
-    <h1>Master Your <span style="color:var(--primary)">Concepts.</span></h1>
-    <p>Clear Notes for JEE & NEET. Zero Distractions.</p>
+    <h1>Who Says One Night <br><span style="color:var(--primary)">Isn't Enough?</span></h1>
+    <p>Crash course notes for legends. Finish the syllabus before sunrise.</p>
 
     <div id="continue-container" style="display:none; margin-bottom: 20px; max-width: 500px; margin-left: auto; margin-right: auto;">
         </div>
