--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
         <a href="class-11.html" class="btn-big">
             <i class="ri-book-open-line"></i> Class 11
         </a>
-        <a href="#" class="btn-big" style="opacity: 0.5;">
-            <i class="ri-lock-line"></i> Class 12
+        <a href="class-12.html" class="btn-big">
+            <i class="ri-graduation-cap-fill"></i> Class 12
         </a>
     </div>
 </main>
