--- a/public/class-12/physics.html
+++ b/public/class-12/physics.html
@@ -6,12 +6,18 @@
     <title>Class 12 Physics | Draqonify</title>
     <link rel="stylesheet" href="../../assets/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="../../assets/images/logo.png">
 </head>
 <body>
+
 <nav class="navbar">
-    <a href="/" class="brand">DRAQONIFY</a>
+    <a href="/" class="brand" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
+        <img src="../../assets/images/logo.png" alt="Draqonify Logo" style="height: 35px; width: auto; border-radius: 6px;">
+        <span style="color:var(--primary);">DRAQONIFY</span>
+    </a>
     <button id="theme-toggle" class="theme-toggle"><i class="ri-moon-line"></i></button>
 </nav>
+
 <main class="container">
     <a href="../class-12.html" style="text-decoration:none; color:var(--text-muted)">
         <i class="ri-arrow-left-line"></i> Back
@@ -27,11 +33,16 @@
             <strong><i class="ri-flashlight-fill" style="color:#FFC107"></i> 1. Electric Charges & Fields</strong>
         </a>
         
+        <a href="physics/electrostatic-potential.html" class="topic-check" style="text-decoration:none; color:var(--text-main)">
+            <strong><i class="ri-battery-2-charge-line" style="color:#FFC107"></i> 2. Electrostatic Potential & Capacitance</strong>
+        </a>
+        
         <div class="topic-check" style="opacity:0.6; cursor:not-allowed;">
-            <span><i class="ri-lock-line"></i> 2. Electrostatic Potential (Coming Soon)</span>
+            <span><i class="ri-lock-line"></i> 3. Current Electricity (Coming Soon)</span>
         </div>
     </div>
 </main>
+
 <script src="../../assets/js/script.js"></script>
 </body>
 </html>
